--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rc-simple-slider",
     "description": "React simple slider component",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "author": "aparasolTree",
     "license": "MIT",
     "main": "dist/index.js",
@@ -29,13 +29,14 @@
     "devDependencies": {
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
-        "@types/styled-components": "^5.1.26",
-        "styled-components": "^5.3.6",
         "tslib": "^2.4.0",
         "tsup": "^6.2.3",
         "typescript": "^4.8.4"
     },
     "dependencies": {
+        "styled-components": "^5.3.6"
+    },
+    "peerDependencies": {
         "react": ">=16",
         "react-dom": ">=16"
     }
